--- a/index.css
+++ b/index.css
@@ -1,29 +1,23 @@
-.container {
+.inhalt {
     height: 100%;
     display: grid;
     grid-gap: 3px;
     grid-template-columns: repeat(12, 1fr);
-    grid-template-rows: 120px auto 80px;
-
-  
+    grid-template-rows: repeat(auto);
+   
 }
 
-.header {
-    grid-column: 1 / -1;
+.header, 
+.headersmall, 
+.search, 
+.searchsmall, 
+.text, 
+.content,
+.color,
+.footer{
+    grid-column: 2 / 12;
 }
 
-.search {
-    grid-column: 1 / -1;
- }
- .content{
-    /* padding: 1em; */
-    grid-column: 1 / 4;
- }
- .nest {
-   align-self: center;
-}
-  
-  
-.footer {
-    grid-column: 1 / -1;
+.map {
+   grid-column: 1/-1;
 }
