--- a/index.css
+++ b/index.css
@@ -3,7 +3,7 @@
     display: grid;
     grid-gap: 3px;
     grid-template-columns: repeat(12, 1fr);
-    grid-template-rows: repeat(auto);
+    grid-template-rows:10em auto;
    
 }
 
